# FEALPyExamples

./: .gitignore  README.md
ProjectMAC/: MainStokesMAC.py  PDEdata.py  Smoothers_2D.py  StokesMACData.py  Vcycle.py  __init__.py  getPDEdata.py  showMACStokes.py  solutionData.py
example/: AFEM_1d_texs1.py  CahnHilliardRFEM.py  CahnHilliardRFEMModel.py  PoissonAFEMRate.py  PoissonAVEMRate.py  PoissonAdaptive.py  PoissonFEMRate.py  PoissonInterfaceVEMRate.py  StokesDFNCVEM2d_example.py  __init__.py
example/newexample/: A.txt  A0.txt  PoissonCVEM2d_example.py  S0.txt
example/results/: error-0.data  vem0.space
example/sfcavem/: SFCAVEMRate.py
example_update1/: ConvDiffReactFEM2d.py  HalfEdgeMesh2d.py  HalfEdgeMeshAaptiveTest.py  HeatEquationAFEM2d_example.py  HeatEquationAFEM2d_yctest.py  PoissonFEMWithDirichletBC_example.py  PoissonFEMWithNeumannBC_example.py  PoissonMFEM2d_example.py  poissionvem_example.py  poisson_2d.py
fealpy_summer_school/: fealpy_mesh_example.ipynb
myExamples/: HHO.mat  PoissonDGRate.py  YC_testFile.py  YC_test_new_func.py  YC_test_polymesh.py  __init__.py  poisson2DData.py
myExamples/DG_Poisson/: DGScalarSpace2d.py  DGSpace2d.py  PoissonDGModel2d.py  PoissonDGRate2d.py  newPoissonDGModel2d.py  poisson2DData.py
myExamples/FEM-SAV/: FEMSAV_CahnHilliard.py  FEMSAV_NavierStokes.py
myExamples/FEMVC_NS/: FEMNavierStokesModel2d.py  (+5 more)
myExamples/FEM_CH_NS_Var_addXi/CapillaryWaveSolution/: CMakeLists.txt
myExamples/FEM_CH_NS_Var_addXi/CapillaryWaveSolution/capillary_wave/: 680.f  compiled  dmath_util.C  gen_capi_soln  merrcz.f
(+229 files in other folders)
